<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivityTwo">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:background="@mipmap/background"
        android:scaleType="fitXY"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        >

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50sp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:scaleType="fitXY"
            tools:context=".RegistrationScreen1">

            <TextView
                android:id="@+id/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="REGISTRATION"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/login_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@color/transperent"
                android:scaleType="fitXY">

                <TextView
                    android:id="@+id/addinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="Add More Info to Your Account"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/yellow" />

                <EditText
                    android:id="@+id/blogname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/addinfo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/rounded_corner"
                    android:ems="12"
                    android:gravity="left"
                    android:hint="Blog Link"
                    android:inputType="text"
                    android:paddingLeft="15dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"/>



                <EditText
                    android:id="@+id/twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/blogname"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/rounded_corner"
                    android:ems="12"
                    android:gravity="left"
                    android:hint="Twitter Handle"
                    android:inputType="text"
                    android:paddingLeft="15dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/instagram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/twitter"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/rounded_corner"
                    android:ems="12"
                    android:gravity="left"
                    android:hint="Instagram Handle"
                    android:inputType="text"
                    android:paddingLeft="15dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/blogtrafic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/instagram"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/rounded_corner"
                    android:ems="12"
                    android:gravity="left"
                    android:hint="Blog Traffic (per month)"
                    android:inputType="number"
                    android:paddingLeft="15dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <com.socialbeat.influencer.MultiSelectionSpinner
                    android:id="@+id/fieldinterest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/blogtrafic"
                    android:layout_alignLeft="@+id/blogtrafic"
                    android:layout_alignRight="@+id/blogtrafic"
                    android:layout_alignStart="@+id/blogtrafic"
                    android:layout_below="@+id/blogtrafic"
                    android:layout_marginTop="12dp"
                    android:ems="12"
                    android:gravity="center"
                    android:prompt="@string/foi" />

                <Button
                    android:id="@+id/update_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/fieldinterest"
                    android:layout_alignStart="@+id/fieldinterest"
                    android:layout_below="@+id/fieldinterest"
                    android:layout_marginTop="9dp"
                    android:layout_toLeftOf="@+id/infoicon"
                    android:layout_toStartOf="@+id/infoicon"
                    android:background="@drawable/rounded_corner_button"
                    android:gravity="center"
                    android:text="SAVE"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/skip_button"
                    android:layout_width="120sp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/update_button"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15sp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/skip"
                    android:textAlignment="center"
                    android:textColor="@color/orange"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/infoicon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/fieldinterest"
                    android:layout_toEndOf="@+id/fieldinterest"
                    android:layout_toRightOf="@+id/fieldinterest"
                    android:background="@mipmap/infoicon1"
                    android:paddingRight="15dp"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/dummy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/skip_button"
                    android:gravity="center"
                    android:visibility="invisible" />

            </RelativeLayout>

            <View
                android:id="@+id/linenew"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_below="@+id/relativeLayout1"
                android:layout_marginTop="50sp"
                android:background="#c0c0c0" />

            <TextView
                android:id="@+id/terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/linenew"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10sp"
                android:gravity="center"
                android:text="@string/register_terms"
                android:textColor="@color/dark_ashe"
                android:textSize="11sp" />

        </RelativeLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>

